Fix VendorCP view more/less butotns
Remove some unused variables

fix schedule table covering bottom

--- a/client/stylesheets/schedule.css
+++ b/client/stylesheets/schedule.css
@@ -29,7 +29,6 @@
 {
     position: absolute;
     display: inline-block;
-    height:100%;
 
     padding:20px;
     background-color:#f2f2f2;
